crates/pgls_pretty_print/tests/snapshots/multi/tests__delete_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/delete.sql
snapshot_kind: text
---
CREATE TABLE delete_test (id serial PRIMARY KEY, a INT, b TEXT);

INSERT INTO delete_test (a) VALUES (10);

INSERT INTO delete_test (a, b) VALUES (50, repeat('x', 10000));

INSERT INTO delete_test (a) VALUES (100);

DELETE FROM delete_test AS dt WHERE dt.a > 75;

DELETE FROM delete_test AS dt WHERE delete_test.a > 25;

SELECT id, a, char_length(b) FROM delete_test;

DELETE FROM delete_test WHERE a > 25;

SELECT id, a, char_length(b) FROM delete_test;

DROP TABLE "delete_test";
